# arcaflow-plugin-opensearch

./: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_opensearch/: opensearch_plugin.py  opensearch_schema.py
inputs/: opensearch_example.yaml
tests/integration/: test_arcaflow_plugin_opensearch.py
tests/integration/fixtures/: empty_data.yaml  nested_data.yaml  simple_data.yaml
tests/unit/: test_arcaflow_plugin_opensearch.py
