[tool.poetry]
name = "arcaflow-plugin-opensearch"
version = "0.0.0"
description = "arcaflow plugin for opensearch"
authors = ["Arcaflow Contributors"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="opensearch_plugin.py", from="./arcaflow_plugin_opensearch"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.14.1"
opensearch-py = "^2.0.0"
certifi = "^2024.0.0"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.9.1"
black = "^24.0.0"
pydocstyle = "^6.1.1"
docformatter = "^1.5.0"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
