[tool.poetry]
name = "arcaflow-plugin-opensearch"
version = "0.0.0"
description = "arcaflow plugin for opensearch"
authors = ["Arcaflow Contributors"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="opensearch_plugin.py", from="./arcaflow_plugin_opensearch"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.14.3"
opensearch-py = "^3.0.0"
certifi = "^2025.0.0"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
# required until Python 3.10: https://github.com/opensearch-project/opensearch-py/blob/a24b9f3f3cccd779ef0d9b1161ce8ce518717d10/setup.py#L57-L58
urllib3 = ">=2.5,<2.6"

[tool.poetry.dev-dependencies]
pycodestyle = "2.13.0"
black = "24.10.0"
pydocstyle = "6.3.0"
docformatter = "1.7.7"
autoflake = "2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
