[tool.poetry]
name = "arcaflow-plugin-opensearch"
version = "0.0.0"
description = "arcaflow plugin for opensearch"
authors = ["Arcaflow Contributors"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="opensearch_plugin.py", from="./arcaflow_plugin_opensearch"  },
]

[tool.poetry.dependencies]
python = "^3.12"
arcaflow-plugin-sdk = "0.14.4"
opensearch-py = "^3.0.0"
certifi = "^2025.0.0"

[tool.poetry.dev-dependencies]
pycodestyle = "2.14.0"
black = "25.1.0"
pydocstyle = "6.3.0"
docformatter = "1.7.7"
autoflake = "2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
